--- a/client/shou2.html
+++ b/client/shou2.html
@@ -6,6 +6,7 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="lib/pagination.css" />
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!--	<link rel="stylesheet" type="text/css" href="lib/bootstrap.min.css"/>-->
 		<link rel="stylesheet" href="dist/shou.min.css">
 		<link rel="stylesheet" type="text/css" href="dist/swiper.min.css" />
 		<style>
@@ -267,9 +268,9 @@
 			</div>
 
 			<!--手机-->
-			<div class="row ">
+			<div class="row">
 
-				<div class="col-md-10 col-md-offset-1  tuu" id="tuu">
+				<div class=" col-md-offset-1  tuu" id="tuu">
 
 				</div>
 			</div>
@@ -297,8 +298,8 @@
 			</div>
 
 			<div class="row">
-				<div class="col-md-10  col-md-offset-1 ">
-					<div class="container-fluid haaa2">
+				<div class="col-md-offset-1 ">
+					<div class="haaa2">
 						
 					</div>
 					<!--<img src="src/images/img3/t0154f41d40bfe51486.png" />
@@ -332,31 +333,31 @@
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1">
 					<div class="row pin">
-						<div class="col-md-3">
+						<div class="col-md-3 aaa">
 							<img src="src/images/img3/t019731e6e194c8869e.jpg" />
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 aaa">
 							<img src="src/images/img3/t01bb60536824f91a3a.jpg" />
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 aaa">
 							<img src="src/images/img3/t01c7030b96b23702f8.jpg" />
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 aaa">
 							<img src="src/images/img3/t01110b63380aa15696.jpg" />
 						</div>
 					</div>
 
 					<div class="row pin">
-						<div class="col-md-3">
+						<div class="col-md-3 aaa">
 							<img src="src/images/img3/t012a80236283e8c8fb.jpg" />
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 aaa">
 							<img src="src/images/img3/t01127ef4cd2922e7b2.jpg" />
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 aaa ">
 							<img src="src/images/img3/t01e98e0549c6bf218e.jpg" />
 						</div>
-						<div class="col-md-3">
+						<div class="col-md-3 aaa">
 							<img src="src/images/img3/t01be7351d58bbc8700.jpg" />
 						</div>
 					</div>
@@ -384,7 +385,7 @@
 
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 ">
-					<div class="row ">
+					<div class="row aj2">
 						<div class="col-md-4 yong swiper-container2">
 							<div class="col-row haaa swiper-wrapper">
 								<!--<div class="ba1">
@@ -485,8 +486,32 @@
 				</div>
 			</div>
 		</div>
+		
+			
+			
+			
+			
+			
+			
+			
+		
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
 		<!--下-->
-
 		<div class="container-fluid zuxia">
 
 			<div class="row ">
